sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:11: error: not found: value estPlusPetit
	 if (estPlusPetit(i+1, i)) {
             ^